tests/expectations/compiler/array/array_too_large_fail.out
Error [ETYC0372077]: An array cannot have more than 2048 elements, found one with 2049 elements
    --> compiler-test:3:20
     |
   3 |     transition foo(a: [bool; 2049]) -> bool {
     |                    ^^^^^^^^^^^^^^^
Error [ETYC0372077]: An array cannot have more than 2048 elements, found one with 2049 elements
    --> compiler-test:4:19
     |
   4 |         let bar = [false; 2049];
     |                   ^^^^^^^^^^^^^
